feature: integrated api with sign-in and sign-up

--- a/backend/package.json
+++ b/backend/package.json
@@ -32,6 +32,8 @@
     "winston": "^3.10.0"
   },
   "devDependencies": {
-    "@types/morgan": "^1.9.5"
+    "@types/morgan": "^1.9.5",
+    "concurrently": "^8.2.1",
+    "prisma": "^5.2.0"
   }
 }
