--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "npm i && npx tsc",
-    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\""
+    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\"",
+    "deploy:staging:serverless": "sls deploy --stage staging --region ap-south-1"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +18,7 @@
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/mongoose": "^5.11.97",
+    "aws-sdk": "^2.1444.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -28,12 +30,14 @@
     "morgan": "^1.10.0",
     "nodemon": "^3.0.1",
     "path": "^0.12.7",
+    "serverless-http": "^3.2.0",
     "typescript": "^5.1.6",
     "winston": "^3.10.0"
   },
   "devDependencies": {
     "@types/morgan": "^1.9.5",
     "concurrently": "^8.2.1",
-    "prisma": "^5.2.0"
+    "prisma": "^5.2.0",
+    "serverless-offline": "^12.0.4"
   }
 }
