--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,8 @@
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/mongoose": "^5.11.97",
-    "aws-sdk": "^2.1444.0",
+    "aws-sdk": "^2.1445.0",
+    "aws-serverless-express": "^3.4.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -30,14 +31,17 @@
     "morgan": "^1.10.0",
     "nodemon": "^3.0.1",
     "path": "^0.12.7",
+    "serverless": "^3.34.0",
     "serverless-http": "^3.2.0",
-    "typescript": "^5.1.6",
     "winston": "^3.10.0"
   },
   "devDependencies": {
+    "@types/aws-serverless-express": "^3.3.5",
     "@types/morgan": "^1.9.5",
     "concurrently": "^8.2.1",
     "prisma": "^5.2.0",
-    "serverless-offline": "^12.0.4"
+    "serverless-offline": "^12.0.4",
+    "serverless-plugin-typescript": "^2.1.5",
+    "typescript": "^5.2.2"
   }
 }
