--- a/backend/package.json
+++ b/backend/package.json
@@ -18,9 +18,9 @@
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/mongoose": "^5.11.97",
-    "aws-sdk": "^2.1445.0",
-    "aws-serverless-express": "^3.4.0",
-    "bcrypt": "^5.1.1",
+    "aws-sdk": "^2.1448.0",
+    "bcrypt": "5.1.1",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
@@ -38,6 +38,7 @@
   "devDependencies": {
     "@types/aws-serverless-express": "^3.3.5",
     "@types/morgan": "^1.9.5",
+    "@types/node": "^20.5.7",
     "concurrently": "^8.2.1",
     "prisma": "^5.2.0",
     "serverless-offline": "^12.0.4",
