--- a/backend/package.json
+++ b/backend/package.json
@@ -5,8 +5,10 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "npm i && npx tsc",
-    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\"",
-    "deploy:staging:serverless": "sls deploy --stage staging --region ap-south-1"
+    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/src/index.js\"",
+    "deploy:staging:serverless": "sls deploy --stage staging --region ap-south-1",
+    "test": "jest",
+    "compile": "tsc --project ./tsconfig.json"
   },
   "keywords": [],
   "author": "",
@@ -16,8 +18,10 @@
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.4",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/mongoose": "^5.11.97",
+    "@types/supertest": "^2.0.12",
     "aws-sdk": "^2.1448.0",
     "bcrypt": "5.1.1",
     "bcryptjs": "^2.4.3",
@@ -25,24 +29,33 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "http-status": "^1.6.2",
+    "jest": "^29.6.4",
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.4",
     "morgan": "^1.10.0",
-    "nodemon": "^3.0.1",
     "path": "^0.12.7",
     "serverless": "^3.34.0",
     "serverless-http": "^3.2.0",
+    "supertest": "^6.3.3",
     "winston": "^3.10.0"
   },
   "devDependencies": {
     "@types/aws-serverless-express": "^3.3.5",
     "@types/morgan": "^1.9.5",
-    "@types/node": "^20.5.7",
+    "@types/node": "^20.5.9",
     "concurrently": "^8.2.1",
+    "nodemon": "^3.0.1",
     "prisma": "^5.2.0",
     "serverless-offline": "^12.0.4",
     "serverless-plugin-typescript": "^2.1.5",
+    "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "testPathIgnorePatterns": [
+      "./src/__test__"
+    ]
   }
 }
