--- a/backend/package.json
+++ b/backend/package.json
@@ -8,13 +8,16 @@
     "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/src/index.js\"",
     "deploy:staging:serverless": "sls deploy --stage staging --region ap-south-1",
     "test": "jest",
-    "compile": "tsc --project ./tsconfig.json"
+    "compile": "tsc --project ./tsconfig.json",
+    "prisma-generate": "prisma generate --schema=./src/prisma/schema.prisma",
+    "lint": "npx eslint .",
+    "lint:fix": "npx eslint --fix"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "^5.2.0",
+    "@prisma/client": "^5.3.1",
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
@@ -44,9 +47,12 @@
     "@types/aws-serverless-express": "^3.3.5",
     "@types/morgan": "^1.9.5",
     "@types/node": "^20.5.9",
+    "@typescript-eslint/eslint-plugin": "^6.7.0",
+    "@typescript-eslint/parser": "^6.7.0",
     "concurrently": "^8.2.1",
+    "eslint": "^8.49.0",
     "nodemon": "^3.0.1",
-    "prisma": "^5.2.0",
+    "prisma": "^5.3.1",
     "serverless-offline": "^12.0.4",
     "serverless-plugin-typescript": "^2.1.5",
     "ts-node": "^10.9.1",
