--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@cdktf/provider-aws": "^17.0.6",
     "@prisma/client": "^5.3.1",
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
@@ -28,6 +29,8 @@
     "aws-sdk": "^2.1448.0",
     "bcrypt": "5.1.1",
     "bcryptjs": "^2.4.3",
+    "cdktf": "^0.18.0",
+    "constructs": "^10.2.70",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
