--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -1,14 +1,9 @@
 version: 0.2
 
 phases:
-  install:
-    runtime-versions:
-      docker: 20
-      commands:
-        cd ./backend/
   pre_build:
     commands:
-      aws ecr get-login-password --no-include-email --region ap-south-1
+      aws ecr get-login-password --region ap-south-1 | docker login --username AWS --password-stdin 582081142432.dkr.ecr.ap-south-1.amazonaws.com
   build:
     commands:
       docker build -t googleform .
