update: buildspec.yaml

--- a/backend/buildspec.yaml
+++ b/backend/buildspec.yaml
@@ -1,17 +1,32 @@
 version: 0.2
 
 phases:
+  install:
+    runtime-versions:
+      docker: 20
   pre_build:
     commands:
-      aws ecr get-login-password --region ap-south-1 | docker login --username AWS --password-stdin 582081142432.dkr.ecr.ap-south-1.amazonaws.com
+      echo Logging in to Amazon ECR.....
+      aws --version
+      $(aws ecr get-login --region ap-south-1 --no-include-email)
+      REPOSITORY_URI=582081142432.dkr.ecr.ap-south-1.amazonaws.com/googleform
+      COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
+      IMAGE_TAG=${COMMIT_HASH:=latest}
   build:
     commands:
-      docker build -t googleform .
-      docker tag googleform:latest 582081142432.dkr.ecr.ap-south-1.amazonaws.com/googleform:latest
+      echo Build started on `date`
+      echo Building the Docker image...
+      docker build -t $REPOSITORY_URI:latest .
+      docker tag $REPOSITORY_URI:latest $REPOSITORY_URI:$IMAGE_TAG
   post_build:
     commands:
-      docker push 582081142432.dkr.ecr.ap-south-1.amazonaws.com/googleform:latest
+      echo Build completed on `date`
+      echo Pushing the Docker images...
+      docker push $REPOSITORY_URI:latest
+      docker push $REPOSITORY_URI:$IMAGE_TAG
+      echo Writing image definitions file...
+      printf '[{"name”:"googleform","imageUri":"%s"}]' $REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json
 
 artifacts:
   files:
-    - '**/*'
+     imagedefinitions.json
