--- a/backend/buildspec.yaml
+++ b/backend/buildspec.yaml
@@ -1,16 +1,27 @@
 version: 0.2
 
 phases:
+  install:
+    runtime-versions:
+      docker: 20
   pre_build:
     commands:
-      aws ecr get-login-password --region ap-south-1 | docker login --username AWS --password-stdin 582081142432.dkr.ecr.ap-south-1.amazonaws.com
+      echo Logging in to Amazon ECR.....
+      aws --version
+      $(aws ecr get-login --region ap-south-1 --no-include-email)
   build:
     commands:
+      echo Build started on `date`
+      echo Building the Docker image...
       docker build -t googleform .
       docker tag googleform:latest 582081142432.dkr.ecr.ap-south-1.amazonaws.com/googleform:latest
   post_build:
     commands:
+      echo Build completed on `date`
+      echo Pushing the Docker images...
       docker push 582081142432.dkr.ecr.ap-south-1.amazonaws.com/googleform:latest
+      echo Writing image definitions file...
+      printf '[{"name”:"googleform","imageUri":"%s"}]' $REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json
 
 artifacts:
   files:
