update: buildspec.yaml

--- a/backend/buildspec.yaml
+++ b/backend/buildspec.yaml
@@ -21,8 +21,7 @@ phases:
       echo Pushing the Docker images...
       docker push 582081142432.dkr.ecr.ap-south-1.amazonaws.com/googleform:latest
       echo Writing image definitions file...
-      printf '[{"name”:"googleform","imageUri":"%s"}]' $REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json
 
 artifacts:
   files:
-    - '**/*'
+    - simple.json
