--- a/backend/buildspec.yaml
+++ b/backend/buildspec.yaml
@@ -6,21 +6,21 @@ phases:
       docker: 20
   pre_build:
     commands:
-      echo Logging in to Amazon ECR.....
-      aws --version
-      $(aws ecr get-login --region ap-south-1 --no-include-email)
+      - echo Logging in to Amazon ECR.....
+      - aws --version
+      - $(aws ecr get-login --region ap-south-1 --no-include-email)
   build:
     commands:
-      echo Build started on `date`
-      echo Building the Docker image...
-      docker build -t googleform .
-      docker tag googleform:latest 582081142432.dkr.ecr.ap-south-1.amazonaws.com/googleform:latest
-      docker push 582081142432.dkr.ecr.ap-south-1.amazonaws.com/googleform:latest
+      - echo Build started on `date`
+      - echo Building the Docker image...
+      - docker build -t googleform .
+      - docker tag googleform:latest 582081142432.dkr.ecr.ap-south-1.amazonaws.com/googleform:latest
   post_build:
     commands:
-      echo Build completed on `date`
-      echo Pushing the Docker images...
-      echo Writing image definitions file...
+      - echo Build completed on `date`
+      - echo Pushing the Docker images...
+      - docker push 582081142432.dkr.ecr.ap-south-1.amazonaws.com/googleform:latest
+      - echo Writing image definitions file...
 
 artifacts:
   files:
