--- a/backend/buildspec_test.yaml
+++ b/backend/buildspec_test.yaml
@@ -1,9 +1,11 @@
 version: 0.2
 
 phases:
+ install:
+    runtime-versions:
+      nodejs: 16.14.2
     pre_build:
       commands:
-        - npm install -g node@16.14.2
         - cd backend
         - npm install
     build:
