--- a/backend/buildspec_test.yaml
+++ b/backend/buildspec_test.yaml
@@ -1,15 +1,16 @@
 version: 0.2
 
 phases:
- install:
+  install:
     runtime-versions:
       nodejs: 16
-    pre_build:
-      commands:
-        - cd backend
-        - npm install
-    build:
-      commands:
-        - npm run build
-        - npm run test
+  pre_build:
+    commands:
+      - node -v
+      - cd backend
+      - npm install
+  build:
+    commands:
+      - npm run build
+      - npm run test
         
