--- a/backend/buildspec.yaml
+++ b/backend/buildspec.yaml
@@ -6,8 +6,6 @@ phases:
         - echo Logging in to Amazon ECR.....
         - aws --version
         - aws ecr get-login-password --region ap-south-1 | docker login --username AWS --password-stdin 582081142432.dkr.ecr.ap-south-1.amazonaws.com
-        - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
-        - IMAGE_TAG=${COMMIT_HASH:=latest}
     build:
       commands:
         - echo Build started on `date`
@@ -21,7 +19,7 @@ phases:
         - echo Pushing the Docker images...
         - docker push 582081142432.dkr.ecr.ap-south-1.amazonaws.com/googleform:latest
         - echo Writing image definitions file...
-        - printf '[{"name":"googleform","imageUri":"%s"}]' 582081142432.dkr.ecr.ap-south-1.amazonaws.com/googleform:$IMAGE_TAG > imagedefinitions.json
+        - printf '[{"name":"googleform","imageUri":"%s"}]' 582081142432.dkr.ecr.ap-south-1.amazonaws.com/googleform:latest > backend/imagedefinitions.json
 
 artifacts:
-    files: imagedefinitions.json
+    files: backend/imagedefinitions.json
