--- a/backend/buildspec.yaml
+++ b/backend/buildspec.yaml
@@ -22,9 +22,9 @@ phases:
         - echo Pushing the Docker images...
         - docker push 582081142432.dkr.ecr.ap-south-1.amazonaws.com/googleform:latest
         - echo Writing image definitions file...
-        - printf '[{"name":"%s","imageUri":"%s"}]' $REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json
+        - printf '[{"name":"googleform","imageUri":"%s"}]' googleform 582081142432.dkr.ecr.ap-south-1.amazonaws.com/googleform:latest > imagedefinitions.json
 
 artifacts:
     files:
-    - imagedefinitions.json
+    - backend/imagedefinitions.json
     discard-paths: yes
