--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,9 @@
     "lint:fix": "npx eslint --fix",
     "start:prod": "node dist/index.js"
   },
+  "engines": {
+    "node": "16.14.1"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
