--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "dist/index.js",
   "scripts": {
-    "build": "npm i && npx tsc",
+    "build": "npm i && npm run prisma:generate && npx tsc",
     "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/src/index.js\"",
     "deploy:staging:serverless": "sls deploy --stage staging --region ap-south-1",
     "test": "jest",
